# Loopian_Rust

./: .gitignore  Cargo.toml  LICENSE  readme.md  settings.toml
assets/: Courier.ttc
doc/: cheatsheet.xlsx  design.pptx  howtouse.md  idea.md  manual.md  manual_en.md  orbit.md  plan.md  readme.md  ws.md
doc/chatgpt/: instruction.txt  notation.md
doc/event/: 202502ws1.pptx  202502ws2.pptx
doc/instruction/: instruction1.txt  instruction2.txt  instruction3.txt  notation.md
doc/notation/: instruction.txt  instruction3.txt  notation.md
load/0901/: 230417.lpn  230417.rtf  240622.lpn  240622.rtf  240727.lpn  240727.rtf
load/_mine/: 230417.lpn  240104.lpn  240705.lpn  240705.rtf  240727.lpn
load/bach_fugue/: f1.lpn  f16.lpn  p1.lpn
load/classy/: chopin_pre4.lpn  chopin_pre4p.lpn  pavane.lpn  piejesu.lpn  voca.lpn
load/exp/: 1.lpn  2.lpn  3.lpn  call.lpn
load/mine/: 230417.lpn  240104.lpn  240622.lpn  240705.lpn  240705.rtf  240710.lpn  240710.rtf  240727.lpn  240727.rtf  241114.lpn
load/old/: 231008.lpn  231105.lpn  231111!.lpn  231111.lpn  231117.lpn  231215.lpn  231215live.lpn  240622_botsu.lpn
load/orbit/: b.lpn  r.lpn
load/pattern/: 0.lpn  1.lpn  2.lpn  3.lpn  4.lpn  5.lpn  6.lpn  7.lpn
load/proko10/: 1.lpn  1@.lpn
load/soprano/: voca.lpn  vocalise.lpn
loopian_app/: Cargo.toml
loopian_graphic_api/: Cargo.toml
loopian_graphic_quantum/: cargo.toml
loopian_graphics/: Cargo.toml  how_to_make_graphics.md
pattern/: 1.lpn  2.lpn  3.lpn  4.lpn  5.lpn
src/: common.rs  elapse_loop.rs  file.rs  graphic.rs  lpnlib.rs  main.rs  setting.rs
(+163 files in other folders)
