[package]
name = "loopian"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.0"
device_query = "1.1.0"
midir = "0.10.0"
rand = "0.8.5"
rand_distr = "0.4.3"
chrono = "0.4.24"
cli-clipboard = "0.4.0"
rppal = {version = "0.18.0", optional = true }
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }

[features]
raspi = ["dep:rppal"]
verbose = []