[package]
name = "loopian"
version = "0.6.6"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
device_query = "1.1.0"
midir = "0.10.1"
rand = "0.9.0"
rand_distr = "0.5.1"
chrono = "0.4.24"
cli-clipboard = "0.4.0"
rppal = {version = "0.18.0", optional = true }
toml = "0.8.20"
serde = { version = "1.0.210", features = ["derive"] }

[features]
raspi = ["dep:rppal"]
verbose = []