[package]
name = "loopian"
version = "0.6.7"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
device_query = "1.1.0"
midir = "0.10.3"
rand = "0.9.2"
rand_distr = "0.5.1"
chrono = "0.4.42"
cli-clipboard = "0.4.0"
rppal = {version = "0.22.1", optional = true }
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }

[features]
raspi = ["dep:rppal"]
verbose = []